@@ -1,0 +1,1 @@
+SELECT concat(value, concat(value)) FROM src GROUP BY concat(value);
